preprocess file saving

--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "161b72aa",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4  0.792772   1073.251  Kecimen  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d6c041a8",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "1b63a70e",
    "metadata": {},
    "outputs": [
@@ -180,18 +180,18 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 900 entries, 0 to 899\n",
       "Data columns (total 8 columns):\n",
-      " #   Column           Non-Null Count  Dtype   \n",
-      "---  ------           --------------  -----   \n",
-      " 0   Area             900 non-null    int64   \n",
-      " 1   MajorAxisLength  900 non-null    float64 \n",
-      " 2   MinorAxisLength  900 non-null    float64 \n",
-      " 3   Eccentricity     900 non-null    float64 \n",
-      " 4   ConvexArea       900 non-null    int64   \n",
-      " 5   Extent           900 non-null    float64 \n",
-      " 6   Perimeter        900 non-null    float64 \n",
-      " 7   Class            900 non-null    category\n",
-      "dtypes: category(1), float64(5), int64(2)\n",
-      "memory usage: 50.3 KB\n"
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Area             900 non-null    int64  \n",
+      " 1   MajorAxisLength  900 non-null    float64\n",
+      " 2   MinorAxisLength  900 non-null    float64\n",
+      " 3   Eccentricity     900 non-null    float64\n",
+      " 4   ConvexArea       900 non-null    int64  \n",
+      " 5   Extent           900 non-null    float64\n",
+      " 6   Perimeter        900 non-null    float64\n",
+      " 7   Class            900 non-null    object \n",
+      "dtypes: float64(5), int64(2), object(1)\n",
+      "memory usage: 56.4+ KB\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9abb2ca5",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
       "Perimeter          0\n",
       "Class              0\n",
       "dtype: int64\n",
-      "Duplicate VAlue: 0\n"
+      "Duplicate Value: 0\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "fea0a7a0",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "ca772dbf",
    "metadata": {},
    "outputs": [
@@ -386,13 +386,36 @@
        "max    278217.000000    0.835455  2697.753000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Generate descriptive statistics of the DataFrame's numerical columns (count, mean, std, min, 25%, 50%, 75%, max)\n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5cde2ed4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing done and file saved as Raisin_preprocessed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the preprocessed DataFrame to a CSV file without including the index\n",
+    "df.to_csv(\"Raisin_preprocessed.csv\", index=False)\n",
+    "\n",
+    "# Print confirmation message that preprocessing is complete and file has been saved\n",
+    "print(\"Preprocessing done and file saved as Raisin_preprocessed\")"
    ]
   }
  ],
