--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -2,22 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "04a2198f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.naive_bayes import GaussianNB, BernoulliNB, MultinomialNB, CategoricalNB\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, f1_score, recall_score, roc_auc_score, auc, roc_curve"
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "161b72aa",
    "metadata": {},
    "outputs": [],
@@ -28,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +68,7 @@
        "      <td>90546</td>\n",
        "      <td>0.758651</td>\n",
        "      <td>1184.040</td>\n",
-       "      <td>Kecimen</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -83,7 +79,7 @@
        "      <td>78789</td>\n",
        "      <td>0.684130</td>\n",
        "      <td>1121.786</td>\n",
-       "      <td>Kecimen</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -94,7 +90,7 @@
        "      <td>93717</td>\n",
        "      <td>0.637613</td>\n",
        "      <td>1208.575</td>\n",
-       "      <td>Kecimen</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -105,7 +101,7 @@
        "      <td>47336</td>\n",
        "      <td>0.699599</td>\n",
        "      <td>844.162</td>\n",
-       "      <td>Kecimen</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -116,7 +112,7 @@
        "      <td>81463</td>\n",
        "      <td>0.792772</td>\n",
        "      <td>1073.251</td>\n",
-       "      <td>Kecimen</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -130,15 +126,15 @@
        "3  45928       286.540559       208.760042      0.684989       47336   \n",
        "4  79408       352.190770       290.827533      0.564011       81463   \n",
        "\n",
-       "     Extent  Perimeter    Class  \n",
-       "0  0.758651   1184.040  Kecimen  \n",
-       "1  0.684130   1121.786  Kecimen  \n",
-       "2  0.637613   1208.575  Kecimen  \n",
-       "3  0.699599    844.162  Kecimen  \n",
-       "4  0.792772   1073.251  Kecimen  "
+       "     Extent  Perimeter  Class  \n",
+       "0  0.758651   1184.040      1  \n",
+       "1  0.684130   1121.786      1  \n",
+       "2  0.637613   1208.575      1  \n",
+       "3  0.699599    844.162      1  \n",
+       "4  0.792772   1073.251      1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "d6c041a8",
    "metadata": {},
    "outputs": [
@@ -169,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "1b63a70e",
    "metadata": {},
    "outputs": [
@@ -202,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "9abb2ca5",
    "metadata": {},
    "outputs": [
@@ -234,18 +230,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "fea0a7a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Class\n",
+       "Besni      450\n",
+       "Kecimen    450\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the 'Class' column to categorical type for efficient memory usage and proper handling in ML algorithms\n",
-    "df['Class'] = df['Class'].astype('category')"
+    "df['Class'] = df['Class'].astype('category')\n",
+    "\n",
+    "# Count the number of occurrences of each category in the 'Class' column to understand class distribution\n",
+    "df['Class'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
+   "id": "e821af6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb = LabelEncoder()\n",
+    "df['Class'] = lb.fit_transform(df['Class'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "ca772dbf",
    "metadata": {},
    "outputs": [
@@ -386,7 +410,7 @@
        "max    278217.000000    0.835455  2697.753000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "id": "5cde2ed4",
    "metadata": {},
    "outputs": [
