--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 81,
    "id": "04a2198f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "id": "161b72aa",
    "metadata": {},
    "outputs": [],
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +69,7 @@
        "      <td>90546</td>\n",
        "      <td>0.758651</td>\n",
        "      <td>1184.040</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Kecimen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -79,7 +80,7 @@
        "      <td>78789</td>\n",
        "      <td>0.684130</td>\n",
        "      <td>1121.786</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Kecimen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -90,7 +91,7 @@
        "      <td>93717</td>\n",
        "      <td>0.637613</td>\n",
        "      <td>1208.575</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Kecimen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -101,7 +102,7 @@
        "      <td>47336</td>\n",
        "      <td>0.699599</td>\n",
        "      <td>844.162</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Kecimen</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -112,7 +113,7 @@
        "      <td>81463</td>\n",
        "      <td>0.792772</td>\n",
        "      <td>1073.251</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Kecimen</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -126,15 +127,15 @@
        "3  45928       286.540559       208.760042      0.684989       47336   \n",
        "4  79408       352.190770       290.827533      0.564011       81463   \n",
        "\n",
-       "     Extent  Perimeter  Class  \n",
-       "0  0.758651   1184.040      1  \n",
-       "1  0.684130   1121.786      1  \n",
-       "2  0.637613   1208.575      1  \n",
-       "3  0.699599    844.162      1  \n",
-       "4  0.792772   1073.251      1  "
+       "     Extent  Perimeter    Class  \n",
+       "0  0.758651   1184.040  Kecimen  \n",
+       "1  0.684130   1121.786  Kecimen  \n",
+       "2  0.637613   1208.575  Kecimen  \n",
+       "3  0.699599    844.162  Kecimen  \n",
+       "4  0.792772   1073.251  Kecimen  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 84,
    "id": "d6c041a8",
    "metadata": {},
    "outputs": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 85,
    "id": "1b63a70e",
    "metadata": {},
    "outputs": [
@@ -198,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 86,
    "id": "9abb2ca5",
    "metadata": {},
    "outputs": [
@@ -230,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 87,
    "id": "fea0a7a0",
    "metadata": {},
    "outputs": [
@@ -243,7 +244,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 88,
    "id": "e821af6e",
    "metadata": {},
    "outputs": [],
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 89,
    "id": "ca772dbf",
    "metadata": {},
    "outputs": [
@@ -301,11 +302,13 @@
        "      <th>ConvexArea</th>\n",
        "      <th>Extent</th>\n",
        "      <th>Perimeter</th>\n",
+       "      <th>Class</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>900.000000</td>\n",
        "      <td>900.000000</td>\n",
        "      <td>900.000000</td>\n",
        "      <td>900.000000</td>\n",
@@ -323,6 +326,7 @@
        "      <td>91186.090000</td>\n",
        "      <td>0.699508</td>\n",
        "      <td>1165.906636</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -333,6 +337,7 @@
        "      <td>40769.290132</td>\n",
        "      <td>0.053468</td>\n",
        "      <td>273.764315</td>\n",
+       "      <td>0.500278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -343,6 +348,7 @@
        "      <td>26139.000000</td>\n",
        "      <td>0.379856</td>\n",
        "      <td>619.074000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
@@ -353,6 +359,7 @@
        "      <td>61513.250000</td>\n",
        "      <td>0.670869</td>\n",
        "      <td>966.410750</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -363,6 +370,7 @@
        "      <td>81651.000000</td>\n",
        "      <td>0.707367</td>\n",
        "      <td>1119.509000</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -373,6 +381,7 @@
        "      <td>108375.750000</td>\n",
        "      <td>0.734991</td>\n",
        "      <td>1308.389750</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -383,6 +392,7 @@
        "      <td>278217.000000</td>\n",
        "      <td>0.835455</td>\n",
        "      <td>2697.753000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -399,18 +409,18 @@
        "75%    105028.250000       494.187014       279.888575      0.842571   \n",
        "max    235047.000000       997.291941       492.275279      0.962124   \n",
        "\n",
-       "          ConvexArea      Extent    Perimeter  \n",
-       "count     900.000000  900.000000   900.000000  \n",
-       "mean    91186.090000    0.699508  1165.906636  \n",
-       "std     40769.290132    0.053468   273.764315  \n",
-       "min     26139.000000    0.379856   619.074000  \n",
-       "25%     61513.250000    0.670869   966.410750  \n",
-       "50%     81651.000000    0.707367  1119.509000  \n",
-       "75%    108375.750000    0.734991  1308.389750  \n",
-       "max    278217.000000    0.835455  2697.753000  "
+       "          ConvexArea      Extent    Perimeter       Class  \n",
+       "count     900.000000  900.000000   900.000000  900.000000  \n",
+       "mean    91186.090000    0.699508  1165.906636    0.500000  \n",
+       "std     40769.290132    0.053468   273.764315    0.500278  \n",
+       "min     26139.000000    0.379856   619.074000    0.000000  \n",
+       "25%     61513.250000    0.670869   966.410750    0.000000  \n",
+       "50%     81651.000000    0.707367  1119.509000    0.500000  \n",
+       "75%    108375.750000    0.734991  1308.389750    1.000000  \n",
+       "max    278217.000000    0.835455  2697.753000    1.000000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +432,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
+   "id": "04e5027d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Area', 'MajorAxisLength', 'MinorAxisLength', 'Eccentricity',\n",
+       "       'ConvexArea', 'Extent', 'Perimeter', 'Class'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "4127ad96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'def rem_outlier(df, col):\\n    q1 = df[col].quantile(.25)\\n    q3 = df[col].quantile(.75)\\n\\n    iqr = q3 -q1 \\n\\n    lower_wh = q1 - 1.5 * iqr\\n    upper_wh = q3 + 1.5 * iqr\\n\\n    df = df[(df[col] >= lower_wh) & (df[col] <= upper_wh)]\\n\\n    return df'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''def rem_outlier(df, col):\n",
+    "    q1 = df[col].quantile(.25)\n",
+    "    q3 = df[col].quantile(.75)\n",
+    "\n",
+    "    iqr = q3 -q1 \n",
+    "\n",
+    "    lower_wh = q1 - 1.5 * iqr\n",
+    "    upper_wh = q3 + 1.5 * iqr\n",
+    "\n",
+    "    df = df[(df[col] >= lower_wh) & (df[col] <= upper_wh)]\n",
+    "\n",
+    "    return df'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "99631355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cap_outlier(df, col):\n",
+    "    q1 = df[col].quantile(0.01)\n",
+    "    q3 = df[col].quantile(0.99)\n",
+    "\n",
+    "    iqr = q3 -q1 \n",
+    "\n",
+    "    lower_wh = q1 - 1.5 * iqr\n",
+    "    upper_wh = q3 + 1.5 * iqr\n",
+    "\n",
+    "    df[col] = np.clip(df[col], lower_wh, upper_wh)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "1aa19140",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df.copy()\n",
+    "sel_col = df.drop(['Class'], axis=1)\n",
+    "for col2 in df_clean.columns:\n",
+    "    df_clean = cap_outlier(df_clean, col2)\n",
+    "\n",
+    "df = df_clean.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "0aa9b0f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"df_clean = df.copy()\\nsel_col = df.drop(['Class'], axis=1)\\nfor col2 in df_clean.columns:\\n    df_clean = rem_outlier(df_clean, col2)\\n\\ndf = df_clean.copy()\""
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''df_clean = df.copy()\n",
+    "sel_col = df.drop(['Class'], axis=1)\n",
+    "for col2 in df_clean.columns:\n",
+    "    df_clean = rem_outlier(df_clean, col2)\n",
+    "\n",
+    "df = df_clean.copy()'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "8bb4a123",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(900, 8)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
    "id": "5cde2ed4",
    "metadata": {},
    "outputs": [
