--- a/preprocess_data.ipynb
+++ b/preprocess_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 97,
    "id": "04a2198f",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 98,
    "id": "161b72aa",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "4  0.792772   1073.251  Kecimen  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 100,
    "id": "d6c041a8",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 101,
    "id": "1b63a70e",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 102,
    "id": "9abb2ca5",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 103,
    "id": "fea0a7a0",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 104,
    "id": "e821af6e",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 105,
    "id": "ca772dbf",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "max    278217.000000    0.835455  2697.753000    1.000000  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 106,
    "id": "04e5027d",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,111 +455,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 107,
    "id": "4127ad96",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'def rem_outlier(df, col):\\n    q1 = df[col].quantile(.25)\\n    q3 = df[col].quantile(.75)\\n\\n    iqr = q3 -q1 \\n\\n    lower_wh = q1 - 1.5 * iqr\\n    upper_wh = q3 + 1.5 * iqr\\n\\n    df = df[(df[col] >= lower_wh) & (df[col] <= upper_wh)]\\n\\n    return df'"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "'''def rem_outlier(df, col):\n",
-    "    q1 = df[col].quantile(.25)\n",
-    "    q3 = df[col].quantile(.75)\n",
-    "\n",
-    "    iqr = q3 -q1 \n",
-    "\n",
-    "    lower_wh = q1 - 1.5 * iqr\n",
-    "    upper_wh = q3 + 1.5 * iqr\n",
-    "\n",
-    "    df = df[(df[col] >= lower_wh) & (df[col] <= upper_wh)]\n",
-    "\n",
-    "    return df'''"
+    "# Function to remove outliers from a specified column using the IQR method\n",
+    "def rem_outlier(df, col):\n",
+    "    q1 = df[col].quantile(.25)                   # 25th percentile (Q1) of the column\n",
+    "    q3 = df[col].quantile(.75)                   # 75th percentile (Q3) of the column\n",
+    "    iqr = q3 - q1                                # Interquartile Range (IQR)\n",
+    "    lower_wh = q1 - 1.5 * iqr                    # Lower bound for outliers\n",
+    "    upper_wh = q3 + 1.5 * iqr                    # Upper bound for outliers\n",
+    "    df = df[(df[col] >= lower_wh) & (df[col] <= upper_wh)]  # Keep rows within bounds\n",
+    "    return df                                    # Return cleaned DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 108,
+   "id": "3242c323",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a clean copy of the DataFrame and remove outliers from all columns\n",
+    "df_clean = df.copy()                               # Make a copy to preserve original data\n",
+    "sel_col = df.drop(['Class'], axis=1)              # Select all columns except 'Class' for outlier removal\n",
+    "\n",
+    "# Loop through all columns and remove outliers using the rem_outlier function\n",
+    "for col2 in df_clean.columns:\n",
+    "    df_clean = rem_outlier(df_clean, col2)        # Apply outlier removal to each column\n",
+    "\n",
+    "df = df_clean.copy()                               # Update original DataFrame with cleaned values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "id": "99631355",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cap_outlier(df, col):\n",
-    "    q1 = df[col].quantile(0.01)\n",
-    "    q3 = df[col].quantile(0.99)\n",
-    "\n",
-    "    iqr = q3 -q1 \n",
-    "\n",
-    "    lower_wh = q1 - 1.5 * iqr\n",
-    "    upper_wh = q3 + 1.5 * iqr\n",
-    "\n",
-    "    df[col] = np.clip(df[col], lower_wh, upper_wh)\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "1aa19140",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_clean = df.copy()\n",
-    "sel_col = df.drop(['Class'], axis=1)\n",
-    "for col2 in df_clean.columns:\n",
-    "    df_clean = cap_outlier(df_clean, col2)\n",
-    "\n",
-    "df = df_clean.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "0aa9b0f3",
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"df_clean = df.copy()\\nsel_col = df.drop(['Class'], axis=1)\\nfor col2 in df_clean.columns:\\n    df_clean = rem_outlier(df_clean, col2)\\n\\ndf = df_clean.copy()\""
+       "'# Function to cap outliers in a specified column using the IQR method and 1st/99th percentiles\\ndef cap_outlier(df, col):\\n    q1 = df[col].quantile(0.01)                  # 1st percentile of the column\\n    q3 = df[col].quantile(0.99)                  # 99th percentile of the column\\n    iqr = q3 - q1                                # Interquartile Range (IQR)\\n    lower_wh = q1 - 1.5 * iqr                    # Lower bound for capping\\n    upper_wh = q3 + 1.5 * iqr                    # Upper bound for capping\\n    df[col] = np.clip(df[col], lower_wh, upper_wh)  # Cap values outside bounds to the bounds\\n    return df                                    # Return DataFrame with capped column'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''df_clean = df.copy()\n",
-    "sel_col = df.drop(['Class'], axis=1)\n",
-    "for col2 in df_clean.columns:\n",
-    "    df_clean = rem_outlier(df_clean, col2)\n",
-    "\n",
-    "df = df_clean.copy()'''"
+    "'''# Function to cap outliers in a specified column using the IQR method and 1st/99th percentiles\n",
+    "def cap_outlier(df, col):\n",
+    "    q1 = df[col].quantile(0.01)                  # 1st percentile of the column\n",
+    "    q3 = df[col].quantile(0.99)                  # 99th percentile of the column\n",
+    "    iqr = q3 - q1                                # Interquartile Range (IQR)\n",
+    "    lower_wh = q1 - 1.5 * iqr                    # Lower bound for capping\n",
+    "    upper_wh = q3 + 1.5 * iqr                    # Upper bound for capping\n",
+    "    df[col] = np.clip(df[col], lower_wh, upper_wh)  # Cap values outside bounds to the bounds\n",
+    "    return df                                    # Return DataFrame with capped column'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
+   "id": "1aa19140",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"# Create a clean copy of the DataFrame and cap outliers in all columns\\ndf_clean = df.copy()                               # Make a copy to preserve original data\\nsel_col = df.drop(['Class'], axis=1)              # Select all columns except 'Class' for outlier handling\\n\\n# Loop through all columns and cap outliers using the cap_outlier function\\nfor col2 in df_clean.columns:\\n    df_clean = cap_outlier(df_clean, col2)        # Apply capping to each column\\n\\ndf = df_clean.copy()   \""
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''# Create a clean copy of the DataFrame and cap outliers in all columns\n",
+    "df_clean = df.copy()                               # Make a copy to preserve original data\n",
+    "sel_col = df.drop(['Class'], axis=1)              # Select all columns except 'Class' for outlier handling\n",
+    "\n",
+    "# Loop through all columns and cap outliers using the cap_outlier function\n",
+    "for col2 in df_clean.columns:\n",
+    "    df_clean = cap_outlier(df_clean, col2)        # Apply capping to each column\n",
+    "\n",
+    "df = df_clean.copy()   '''                            # Update original DataFrame with capped values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
    "id": "8bb4a123",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(900, 8)"
+       "(776, 8)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 112,
    "id": "5cde2ed4",
    "metadata": {},
    "outputs": [
