--- a/visualization_data.ipynb
+++ b/visualization_data.ipynb
@@ -1,16 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "349a3636",
+   "metadata": {},
+   "source": [
+    "# Raisin Dataset Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "87589d17",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import numpy as np"
+    "import seaborn as sns"
    ]
   },
   {
@@ -264,8 +271,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4fe872ca",
+   "metadata": {},
+   "source": [
+    "# Histogram + KDE for all features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "dae7538d",
    "metadata": {},
    "outputs": [
@@ -289,21 +304,31 @@
     "    'ConvexArea', \n",
     "    'Extent', \n",
     "    'Perimeter'\n",
-    "]\n",
-    "fig, axes = plt.subplots(2, 4, figsize=(15, 10))\n",
+    "]                                                 # List of feature columns to plot\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 4, figsize=(15, 10))  # Create a 2x4 grid of subplots\n",
+    "\n",
     "for ax, col in zip(axes.flatten(), sel_col):\n",
     "    sns.histplot(\n",
-    "        data= df, \n",
-    "        x= col, \n",
-    "        ax = ax,\n",
-    "        color='black',\n",
-    "        alpha=1,\n",
-    "        linewidth=2,\n",
-    "        edgecolor=\"#36EB26\",\n",
-    "        kde=True\n",
+    "        data=df,                                   # Use the DataFrame as data source\n",
+    "        x=col,                                     # Set current feature column on x-axis\n",
+    "        ax=ax,                                     # Assign plot to current subplot axis\n",
+    "        color='black',                             # Fill color of the histogram bars\n",
+    "        alpha=1,                                   # Set transparency of bars\n",
+    "        linewidth=2,                               # Width of the bar edges\n",
+    "        edgecolor=\"#36EB26\",                        # Color of bar edges\n",
+    "        kde=True                                    # Overlay kernel density estimate\n",
     "    )\n",
-    "    ax.set_xlabel(col, color=\"black\", fontsize= 12, fontweight='bold')\n",
-    "    ax.set_ylabel(\"Count\", color=\"#197E10\", fontsize= 10)"
+    "    ax.set_xlabel(col, color=\"black\", fontsize=12, fontweight='bold')  # Style x-axis label\n",
+    "    ax.set_ylabel(\"Count\", color=\"#197E10\", fontsize=10)               # Style y-axis label"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3140056f",
+   "metadata": {},
+   "source": [
+    "# Class Distribution Barplot"
    ]
   },
   {
@@ -352,6 +377,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cdc65db",
+   "metadata": {},
+   "source": [
+    "# Pairplot for top 3 features + Class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a6fe6f98",
@@ -369,13 +402,22 @@
     }
    ],
    "source": [
-    "top_features = ['Area', 'Eccentricity', 'Perimeter', 'Class']\n",
+    "top_features = ['Area', 'Eccentricity', 'Perimeter', 'Class']  # Select top features and target for pairplot\n",
+    "\n",
     "sns.pairplot(\n",
-    "    df[top_features],\n",
-    "    hue='Class',\n",
-    "    corner=True\n",
+    "    df[top_features],      # Use DataFrame with selected columns\n",
+    "    hue='Class',           # Color points based on 'Class' column\n",
+    "    corner=True            # Show only lower triangle of pairplot\n",
     ")\n",
-    "plt.show()"
+    "plt.show()                # Display the pairplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd194d90",
+   "metadata": {},
+   "source": [
+    "# Boxplots for all features"
    ]
   },
   {
@@ -419,6 +461,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9ec5bd5f",
+   "metadata": {},
+   "source": [
+    "# Class-wise Violin Plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "id": "09cbf9d6",
@@ -457,6 +507,14 @@
     "\n",
     "plt.tight_layout()                               # Adjust spacing between subplots\n",
     "plt.show()                                       # Display the violin plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c51abd9",
+   "metadata": {},
+   "source": [
+    "# Correlation Heatmap"
    ]
   },
   {
