new file created

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 329,
    "id": "5f5d2cd4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,8 @@
     "    roc_auc_score, \n",
     "    roc_curve, \n",
     "    auc\n",
-    ")"
+    ")\n",
+    "import pickle"
    ]
   },
   {
@@ -1167,6 +1168,16 @@
     "plt.legend(loc='lower right')\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "id": "a2680ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(knn_model, open(\"raisin.pkl\", \"wb\"))"
    ]
   }
  ],
