--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -731,6 +731,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 331,
+   "id": "05405ba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[72, 14],\n",
+       "       [13, 81]])"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm_knn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 295,
    "metadata": {},
    "outputs": [
@@ -1172,7 +1194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 332,
+   "id": "f8e669b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(scaler, open(\"scaler.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a2680ac1",
    "metadata": {},
    "outputs": [],
