--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "d3efcf61",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
+   "id": "7d69f616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = pickle.load(open(\"scaler.pkl\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "b0d96b59",
    "metadata": {},
    "outputs": [],
@@ -22,8 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "3a025f7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample = [[87524.0, 442.246011, 253.291155, 0.819738, 90546.0, 0.758651, 1184.040]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "0b107cbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\MD Maruf\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled = scaler.transform(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "19f84f3b",
    "metadata": {},
    "outputs": [
     {
@@ -40,22 +79,14 @@
        "array([0])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict([[-0.176356, 0.179564, -0.448263, 0.887128, -0.148044, -0.543162, 0.055787]])"
+    "model.predict(scaled)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c58f3e33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
