many file added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,69 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "d3efcf61",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle"
+    "import pickle\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "7d69f616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scaler = pickle.load(open(\"scaler.pkl\", \"rb\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "b0d96b59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = pickle.load(open(\"raisin.pkl\", \"rb\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "3a025f7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = [[87524.0, 442.246011, 253.291155, 0.819738, 90546.0, 0.758651, 1184.040]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "0b107cbb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\MD Maruf\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
-      "  warnings.warn(\n"
+      "[1]\n"
      ]
-    }
-   ],
-   "source": [
-    "scaled = scaler.transform(sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "19f84f3b",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -72,20 +31,19 @@
       "c:\\Users\\MD Maruf\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\utils\\validation.py:2749: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
       "  warnings.warn(\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([0])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(scaled)"
+    "scaler = pickle.load(open(\"scaler.pkl\", \"rb\"))\n",
+    "model = pickle.load(open(\"knn_raisin.pkl\", \"rb\"))\n",
+    "\n",
+    "manual_input = [[79408, 352.19077, 290.827533, 0.590559, 81463, 0.792772, 1073.251]]\n",
+    "\n",
+    "manual_df = pd.DataFrame(manual_input, columns=['Area','MajorAxisLength','MinorAxisLength','Eccentricity','ConvexArea','Extent','Perimeter'])\n",
+    "\n",
+    "scaled = scaler.transform(manual_df)\n",
+    "pred = model.predict(scaled)\n",
+    "print(pred)"
    ]
   }
  ],
