--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -1204,12 +1204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 333,
    "id": "a2680ac1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(knn_model, open(\"raisin.pkl\", \"wb\"))"
+    "pickle.dump(knn_model, open(\"knn_raisin.pkl\", \"wb\"))"
    ]
   }
  ],
